==> MikroElektronika/mikrosdk_v2/targets/pic_16bit/mikroe/dspic/src/tim/implementation_1/hal_ll_tim.c <==
#include "hal_ll_tim.h"
#include "hal_ll_gpio.h"
#include "hal_ll_tim_pin_map.h"
#include "hal_ll_pps.h"
#define HAL_LL_TIM_PRESCALER_1                                                  (0)
#define HAL_LL_TIM_PRESCALER_8                                                  (1)
#define HAL_LL_TIM_PRESCALER_64                                                 (2)
#define HAL_LL_TIM_PRESCALER_256                                                (3)
#define HAL_LL_TIM_PRESCALER_VALUE_1                                            (1)
#define HAL_LL_TIM_PRESCALER_VALUE_8                                            (8)
#define HAL_LL_TIM_PRESCALER_VALUE_64                                           (64)
#define HAL_LL_TIM_PRESCALER_VALUE_256                                          (256)
#define HAL_LL_TCON_TCKPS                                                       (4)
#define HAL_LL_TIM_TMRON_BIT                                                    (15)
#define HAL_LL_TIM_FREQ_PRESCALER_1                                             (1)
#define HAL_LL_TIM_START                                                        (0x0006)
#define HAL_LL_TIM_STOP                                                         (0xFFF8)
#define HAL_LL_TIM_NOT_VALID                                                    (0)
#define HAL_LL_OCXCON2_VALUE                                                    (0x001F)
#define HAL_LL_SELECT_TIM_2                                                     (0x0000)

hal_ll_err_t hal_ll_tim_register_handle( hal_ll_pin_name_t pin, hal_ll_tim_handle_register_t *handle_map, uint8_t *hal_module_id ) {
    uint8_t pin_check_result;
    uint8_t index;

    if ( HAL_LL_PIN_NC == ( pin_check_result = _hal_ll_tim_check_pin( pin, &index, handle_map ) ) ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    if ( ( hal_ll_tim_hw_specifics_map[ pin_check_result ].pin != pin ) ) {
        // Used only for chips which have TIM PPS pins
        #if HAL_LL_PWM_PPS_ENABLED == true
        // Clear previous module pps
        _hal_ll_pps_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], false );
        #endif

        if ( _hal_ll_tim_map_pin( pin_check_result, index ) ) {
            return HAL_LL_TIM_ERROR;
        }

        // Used only for chips which have TIM PPS pins
        #if HAL_LL_PWM_PPS_ENABLED == true
        // Set mapped pps
        _hal_ll_pps_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], true );
        #endif

        handle_map[ pin_check_result ].init_ll_state = false;
        hal_ll_module_state[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = ( handle_t * )&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    handle_map[ pin_check_result ].hal_ll_tim_handle = ( handle_t * )&hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle;

    return HAL_LL_TIM_SUCCESS;
}

uint32_t hal_ll_tim_set_freq( handle_t *handle, uint32_t freq_hz ) {
    uint32_t tmp_period;
    uint32_t tmp_freq;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    low_level_handle->init_ll_state = false;

    tmp_period = hal_ll_tim_get_period( freq_hz, HAL_LL_TIM_FREQ_PRESCALER_1 );

    write_reg_bitwise_and( hal_ll_tim_hw_specifics_map_local->timer->hal_tcon_reg_addr, HAL_LL_TIM_TMRON_BIT );

    clear_reg( hal_ll_tim_hw_specifics_map_local->base->hal_ocrs_reg_addr );

    hal_ll_tim_stop( handle );

    if ( UINT16_MAX < tmp_period ) {
        tmp_freq = _hal_ll_tim_get_freq;
        hal_ll_tim_hw_specifics_map_local->freq_hz = tmp_freq;
    } else {
        tmp_freq = freq_hz;
        hal_ll_tim_hw_specifics_map_local->freq_hz = freq_hz;
    }

    _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    return tmp_freq;
}

hal_ll_err_t hal_ll_tim_set_duty( handle_t *handle, float duty_ratio ) {
    uint16_t max_period;
    float    tmp_duty;
    volatile uint16_t max_duty = 0;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    if ( false == low_level_handle->init_ll_state ) {
        _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );
        low_level_handle->init_ll_state = true;
    }

    tmp_duty = duty_ratio * 100;
    max_period = hal_ll_tim_hw_specifics_map_local->max_period;

    max_duty = ( ( float )max_period / 100 ) * tmp_duty;

    #ifdef HAL_LL_TIM_IMP_2
    write_reg( hal_ll_tim_hw_specifics_map_local->base->hal_ocrs_reg_addr, max_period );
    write_reg( hal_ll_tim_hw_specifics_map_local->base->hal_ocr_reg_addr, max_duty );
    #else
    write_reg( hal_ll_tim_hw_specifics_map_local->base->hal_ocrs_reg_addr, max_duty );
    #endif

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_start( handle_t *handle ) {
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    write_reg_bitwise_or( hal_ll_tim_hw_specifics_map_local->base->hal_occon_reg_addr, HAL_LL_TIM_START );

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_stop( handle_t *handle ) {
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    write_reg_bitwise_and( hal_ll_tim_hw_specifics_map_local->base->hal_occon_reg_addr, HAL_LL_TIM_STOP );

    return HAL_LL_TIM_SUCCESS;
}

static void _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_t *map ) {
    _hal_ll_tim_configure_pin( hal_ll_tim_hw_specifics_map_local, true );

    // Used only for chips which have TIM PPS pins
    #if HAL_LL_PWM_PPS_ENABLED == true
    // Set pps functions for mapped pins
    _hal_ll_pps_set_state( map, true );
    #endif

    _hal_ll_tim_hw_init( map );
}
